complete login request

--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
             <div class="form">
                 <h2>Cetacis cloud</h2>
                 <label>
-                    <span>Account</span>
-                    <input type=""/>
+                    <span>Username</span>
+                    <input id="username">
                 </label>
                 <label>
                     <span>Password</span>
-                    <input type="password" />
+                    <input id="password" type="password" >
                 </label>
-                <button type="button" class="submit">login</button>
+                <button type="button" onclick="login()" class="submit">login</button>
             </div>
         </div>
-
-
     </div>
 </body>
-
+<script type="text/javascript" src="js/login.js"></script>
 </html>
