complete login request

--- a/index.html
+++ b/index.html
@@ -27,4 +27,5 @@
     </div>
 </body>
 <script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="js/check.js"></script>
 </html>
